--- a/package.json
+++ b/package.json
@@ -40,6 +40,8 @@
     "css-loader": "^0.18.0",
     "enzyme": "^2.0.0",
     "extract-text-webpack-plugin": "^0.8.2",
+    "less": "^2.7.1",
+    "less-loader": "^2.2.3",
     "nyc": "^5.6.0",
     "postcss-loader": "^0.6.0",
     "postcss-nested": "^1.0.0",
