Minor fixes based on feedback.

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "postinstall": "npm run build",
     "server": "node start.js",
-    "build": "webpack -p --progress --config webpack.production.config.js",
+    "build": "webpack --progress --config webpack.production.config.js",
     "test": "nyc ava --fail-fast --verbose --require babel-register",
     "coveralls": "nyc report --reporter=text-lcov | coveralls",
     "clean": "rm build/app.js"
